welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:8: error: '<-' expected but ')' found.
		for (x w- 1 to nbPas) {
                                    ^Program:11: error: illegal start of simple expression
	}
        ^