welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int, versLAvant: Boolean) : Double = {
	if (versLAvant) {
		for (x <- 1 to nbPas) {
			avance()
		}
	} else {
		for (x w- 1 to nbPas) {
			recule()
		}
	}
}
